--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: ng
+name: akgvp
 channels:
   - defaults
 dependencies:
@@ -68,4 +68,4 @@ dependencies:
     - urllib3==1.24.2
     - werkzeug==0.15.3
     - zipp==3.3.1
-prefix: /home/sxz/anaconda3/envs/ng
+prefix: /home/xunuo/anaconda3/envs/akgvp
